# personality_classification_neuron_network

./: .gitignore  README.md  app.py  model.py  personality_dataset.csv  pyproject.toml
Scripts/: activate  activate.bat
static/: styles.css
templates/: index.html
