[project]
name = "personalities"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
    "flask>=3.1.1,<4.0.0",
    "tensorflow>=2.13.0,<2.15.0",
    "scikit-learn>=1.7.0,<2.0.0",
    "joblib>=1.5.1,<2.0.0",
    "pandas>=2.3.0,<3.0.0",
    "matplotlib>=3.10.3,<4.0.0",
    "numpy>=1.26.0,<2.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
